Lego Style File Create

--- a/public/tournamenter-obr/index.html
+++ b/public/tournamenter-obr/index.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="components/font-awesome/font-awesome.css">
 	<link rel="stylesheet" href="components/bootstrap/bootstrap.css">
 	<link rel="stylesheet" href="styles/site.css">
+	<link rel="stylesheet" href="styles/lego.css">
 
 	<!-- WebApp -->
 	<link rel="manifest" href="manifest.json">
